syntax = "proto3";

package ubertool.trusted.api.v1;

option go_package = "ubertool-backend-trusted/api/gen/v1;ubertool_v1";


option java_multiple_files = true;
option java_package = "com.ubertool.trusted.api.v1";
option java_outer_classname = "ImageStorageServiceProto";

// Image storage service for uploading tool images and avatars
service ImageStorageService {
  // Get presigned URL for uploading an image
  rpc GetUploadUrl(GetUploadUrlRequest) returns (GetUploadUrlResponse);

  // Confirm image upload after client uploads to presigned URL
  rpc ConfirmImageUpload(ConfirmImageUploadRequest) returns (ConfirmImageUploadResponse);

  // Get presigned URL for downloading an image
  rpc GetDownloadUrl(GetDownloadUrlRequest) returns (GetDownloadUrlResponse);

  // Get Images of a tool
  rpc GetToolImages(GetToolImagesRequest) returns (GetToolImagesResponse);

  // Delete an image
  rpc DeleteImage(DeleteImageRequest) returns (DeleteImageResponse);

  // Set primary image
  rpc SetPrimaryImage(SetPrimaryImageRequest) returns (SetPrimaryImageResponse);
}

// Presigned URL methods
message GetUploadUrlRequest {
  string filename = 1;
  string content_type = 2;  // e.g., "image/jpeg", "image/png"
  int32 tool_id = 3;        // 0 for new tools
  bool is_primary = 4;
}

message GetUploadUrlResponse {
  string upload_url = 1;      // Presigned PUT URL for uploading
  int32 image_id = 2;         // Unique ID to reference this image
  string download_url = 3;    // URL to download/display the image
  int64 expires_at = 4;       // Unix timestamp when URLs expire
}

message ConfirmImageUploadRequest {
  int32 image_id = 1;
  int32 tool_id = 2;
  int64 file_size = 3;
}

message ConfirmImageUploadResponse {
  bool success = 1;
  ToolImage tool_image = 2;
  string message = 3;
}

message GetDownloadUrlRequest {
  int32 image_id = 1;
  int32 tool_id = 2;
  bool is_thumbnail = 3;
}

message GetDownloadUrlResponse {
  string download_url = 1;
  int64 expires_at = 2;
}

// Get uploaded tool image
message GetToolImagesRequest {
  int32 tool_id = 1;
}

message GetToolImagesResponse {
  repeated ToolImage images = 1;
}

// Delete image method messages
message DeleteImageRequest {
  int32 image_id = 1;
  int32 tool_id = 2;
}

message DeleteImageResponse {
  bool success = 1;
}

message SetPrimaryImageRequest {
  int32 image_id = 1;
  int32 tool_id = 2;
}

message SetPrimaryImageResponse {
  bool success = 1;
  string message = 2;
}

message ToolImage {
  int32 id = 1;
  int32 tool_id = 2;
  string file_name = 3;
  string file_path = 4;
  string thumbnail_path = 5;
  int64 file_size = 6;
  bool is_primary = 7;
  int32 display_order = 8;
  string status = 9;
  string created_on = 10;
  string confirmed_on = 11;
}

